Author                        :Ruchi Pareek Description                   :Fix for Bug ST-36 Next button alignment Files modified                :profileCreationAb.css, profileCreationAb.html, profileCreationTp.css, profileCreationTp.html

--- a/skillIndia/server/src/main/resources/static/css/profileCreationAb.css
+++ b/skillIndia/server/src/main/resources/static/css/profileCreationAb.css
@@ -45,3 +45,24 @@ th{
 .welcome-desc{
     margin-top : 15px;
 }
+.btn-pc-next
+{
+	background-color : #1ab394;
+	color : white;
+	text-align: center;
+	width : 100%;
+}
+.btn-pc-draft
+{
+	background-color : #f49417;
+	color : white;
+	text-align : center;
+	width : 100%;
+}
+.btn-pc-sumbit
+{
+	background-color : #1ab394;
+	color : white;
+	text-align : center;
+	width : 100%;
+}
